# actasynth

./: .env.example  .gitignore  ARCHITECTURE.md  Dockerfile  Dockerfile.lambda  Dockerfile.minimal  Dockerfile.simple  LICENSE  Makefile  PROJECT_SUMMARY.md  PYDANTIC_SCHEMA_REFACTOR.md  QUICKSTART.md  README.md  README_DETAILED.md  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements.txt  test_schema_generation.py  test_schemas_isolated.py  test_workflow_schemas.py
app/: __init__.py  config.py  main.py
app/agents/: __init__.py  json_parser.py  response_validator.py  workflow_executor.py
app/api/: auth.py  routes.py
app/observability/: __init__.py  logger.py  metrics.py
app/prompts/: __init__.py  templates.py
app/providers/: __init__.py  anthropic_provider.py  base.py  factory.py  google_provider.py  openai_provider.py
app/schemas/: __init__.py  value_proposition.py  workflow.py
app/workflows/: __init__.py  cache.py  database.py
config/: prometheus.yml
docs/: ARCHITECTURE.md  CHECKLIST.md  QUICKSTART.md  README_DETAILED.md
examples/: test_scenarios.sh  test_workflows.sh
terraform/: apigateway.tf  cloudwatch.tf  cognito.tf  ecr.tf  iam.tf  lambda.tf  main.tf  outputs.tf  secrets.tfvars.example  variables.tf
tests/: __init__.py  conftest.py  test_api.py  test_providers.py  test_schemas.py  test_validators.py
